Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31042

Slider have incorrect behavior on Mac OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.1.0 RC1
    • 5.1.0
    • Quick: Controls 1
    • None
    • Mac OS X 10.8
    • macOS
    • c5d6d214f964eb4f3f582c0cd7ab6fed7626f537, dedc113593d4d7d0e9d500800bc06b89649d5cfe

      QtQuick Control Slider doesn't have the same behavior as a native Slider.

      1. User presses on the slider button, the slider button should have a pressed look to it.
      2. User presses on the slider button, the button shouldn't move until the user starts dragging the button.
      3. User presses on the slider bar (not on the button), the button should center under the mouse.
      4. When user drags the slider button, the mouse should stay under the button and shouldn't drift while dragging it. Probably a scaling problem?

      A good way to compare the two sliders is to open Interface Builder in Mac OS X and add a Cocoa slider.

        For Gerrit Dashboard: QTBUG-31042
        # Subject Branch Project Status CR V

            bachewii Jens
            vpicaver Philip Schuchardt
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes