Fix various issues with slider

- Fixed missing press appearance of slider handle
- Removed drag threshold when pulling handle
- Ensure handle stays connected to mouse cursor by giving the fake handle size

Task-number: QTBUG-31042

Change-Id: I289a48b5fa67dde2792590645b8630a7ae6518d9
Reviewed-by: Caroline Chao <caroline.chao@digia.com>