tests/auto/controls/data/tst_slider.qml
@@ -127,7 +127,7 @@ Item {
             var ratio = mouseRatio / sliderDeltaRatio
 
             mouseWheel(slider, 5, 5, 20 * ratio, 0)
-            compare(slider.value, 20)
+            compare(slider.value, 22)
 
             slider.maximumValue = 30
             slider.minimumValue = 0
@@ -238,7 +238,15 @@ Item {
         }
 
         function test_updateValueWhileDragging() {
-            var control = Qt.createQmlObject('import QtQuick.Controls 1.0; Slider {x: 0; y: 0; width: 200; height: 50}', container, '')
+            var controlString =
+                    'import QtQuick 2.1 ;                     \
+                     import QtQuick.Controls 1.0 ;            \
+                     import QtQuick.Controls.Styles 1.0;      \
+                     Slider {                                 \
+                         width: 200 ;                         \
+                         height : 50;                         \
+                         style: SliderStyle{ handle: Item{ } }}'
+            var control = Qt.createQmlObject(controlString, container, '')
             control.maximumValue = 200
             control.minimumValue = 0
             control.stepSize = 0.1
@@ -249,14 +257,15 @@ Item {
             spy.signalName = "valueChanged"
 
             control.updateValueWhileDragging = false
-            mouseDrag(control, 0,1, 100 + util.dragThreshold + 1 , 0, Qt.LeftButton)
+            mouseDrag(control, 0,1, 100 , 0, Qt.LeftButton)
             compare(control.value, 100)
             compare(spy.count, 1)
 
             control.updateValueWhileDragging = true
-            mouseDrag(control, 100,1, 80 + util.dragThreshold + 1 , 0, Qt.LeftButton)
+
+            mouseDrag(control, 100,1, 80 , 0, Qt.LeftButton)
             compare(control.value, 180)
-            compare(spy.count, 4)
+            compare(spy.count, 5)
             control.destroy()
         }
     }
